fixed letter-spacing and text for tg

--- a/styles/blocks/_about.scss
+++ b/styles/blocks/_about.scss
@@ -75,6 +75,7 @@
           font-family: var(--font-family-base);
           @include font-body;
           text-align: left;
+          letter-spacing: normal;
 
           margin-bottom: rem(12);
         }
